tests/neg-custom-args/captures/boundschecks3.check
-- [E057] Type Mismatch Error: tests/neg-custom-args/captures/boundschecks3.scala:9:11 ---------------------------------
9 |  val foo: C[Tree^] = ??? // error
  |           ^
  |           Type argument test.Tree^ does not conform to upper bound test.Tree in inferred type test.C[test.Tree^]
  |
  |           where:    ^ refers to a root capability in the type of value foo
  |
  | longer explanation available when compiling with `-explain`
-- [E057] Type Mismatch Error: tests/neg-custom-args/captures/boundschecks3.scala:10:11 --------------------------------
10 |  type T = C[Tree^] // error
   |           ^
   |          Type argument test.Tree^ does not conform to upper bound test.Tree in inferred type test.C[test.Tree^]
   |
   |          where:    ^ refers to a root capability in the type of type T
   |
   | longer explanation available when compiling with `-explain`
-- [E057] Type Mismatch Error: tests/neg-custom-args/captures/boundschecks3.scala:11:11 --------------------------------
11 |  val bar: T -> T = ??? // error
   |           ^
   |Type argument test.Tree^ does not conform to upper bound test.Tree in subpart test.C[test.Tree^] of inferred type test.C[test.Tree^] -> test.C[test.Tree^]
   |
   |where:    ^ refers to the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
-- [E057] Type Mismatch Error: tests/neg-custom-args/captures/boundschecks3.scala:12:11 --------------------------------
12 |  val baz: C[Tree^] -> Unit = ??? // error
   |           ^
   |Type argument test.Tree^ does not conform to upper bound test.Tree in subpart test.C[test.Tree^] of inferred type test.C[test.Tree^] -> Unit
   |
   |where:    ^ refers to the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
